translation-tool/inputs/source_meta/objects/Geography__c.object
<CustomObject>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>156</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Unique__c</fullName>
        <externalId>true</externalId>
        <label>Address Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complement__c</fullName>
        <label>Complement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Panama</fullName>
                </value>
                <value>
                    <fullName>Peru</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Use__c</fullName>
        <formula>if(  Total_Available__c +  Total_Blocked__c  &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Neighborhood__c</fullName>
        <label>Neighborhood</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Amazonas</fullName>
                </value>
                <value>
                    <fullName>Ancash</fullName>
                </value>
                <value>
                    <fullName>Antioquia</fullName>
                </value>
                <value>
                    <fullName>Antofagasta</fullName>
                </value>
                <value>
                    <fullName>Apurimac</fullName>
                </value>
                <value>
                    <fullName>Arauca</fullName>
                </value>
                <value>
                    <fullName>Arequipa</fullName>
                </value>
                <value>
                    <fullName>Arica y Parinacota</fullName>
                </value>
                <value>
                    <fullName>Atacama</fullName>
                </value>
                <value>
                    <fullName>Atlántico</fullName>
                </value>
                <value>
                    <fullName>Ayacucho</fullName>
                </value>
                <value>
                    <fullName>Aysén</fullName>
                </value>
                <value>
                    <fullName>Azuay</fullName>
                </value>
                <value>
                    <fullName>Bío Bío</fullName>
                </value>
                <value>
                    <fullName>Bocas del Toro</fullName>
                </value>
                <value>
                    <fullName>Bogotá</fullName>
                </value>
                <value>
                    <fullName>Bolívar</fullName>
                </value>
                <value>
                    <fullName>Boyacá</fullName>
                </value>
                <value>
                    <fullName>Buenos Aires</fullName>
                </value>
                <value>
                    <fullName>Cajamarca</fullName>
                </value>
                <value>
                    <fullName>Caldas</fullName>
                </value>
                <value>
                    <fullName>Callao</fullName>
                </value>
                <value>
                    <fullName>Cañar</fullName>
                </value>
                <value>
                    <fullName>Capitán Prat</fullName>
                </value>
                <value>
                    <fullName>Caquetá</fullName>
                </value>
                <value>
                    <fullName>Carchi</fullName>
                </value>
                <value>
                    <fullName>Casanare</fullName>
                </value>
                <value>
                    <fullName>Catamarca</fullName>
                </value>
                <value>
                    <fullName>Cauca</fullName>
                </value>
                <value>
                    <fullName>Cesar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Available__c</fullName>
        <label>Total Available</label>
        <summaryForeignKey>Offer_Geography_Available__c.Geography__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Blocked__c</fullName>
        <label>Total Blocked</label>
        <summaryForeignKey>Offer_GeographyBlocked__c.Geography__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip / Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Geography</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <columns>District__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Ecuador</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Ecuador</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <columns>District__c</columns>
        <columns>Address_Unique__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Ecuador</value>
        </filters>
        <label>All Ecuador</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Chile</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <columns>District__c</columns>
        <columns>Address_Unique__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Chile</value>
        </filters>
        <label>Chile</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Colombia</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>State__c</columns>
        <columns>District__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Colombia</value>
        </filters>
        <label>Colombia</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Peru</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <columns>District__c</columns>
        <columns>Address_Unique__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Peru</value>
        </filters>
        <filters>
            <field>District__c</field>
            <operation>contains</operation>
            <value>Lima</value>
        </filters>
        <label>Peru</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Geo-{0000000000}</displayFormat>
        <label>Geography Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geographys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>